Refactoring progress