@@ -6,7 +6,7 @@ plugins {
     id("org.beryx.jlink") version "2.25.0"
 }
 
-group = "BCBFixHub"
+group = "com.bcbfixhub"
 version = "1.0-SNAPSHOT"
 
 repositories {
@@ -17,7 +17,7 @@ val junitVersion = "5.12.1"
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(25)
+        languageVersion.set(JavaLanguageVersion.of(25))
     }
 }
 
@@ -28,13 +28,6 @@ tasks.withType<JavaCompile> {
 application {
     mainModule.set("bcbfixhub.bcbfixhub")
     mainClass.set("bcbfixhub.bcbfixhub.AppLauncher")
-}
-
-tasks.named<JavaExec>("run") {
-    jvmArgs(
-        "--add-opens=java.base/java.lang=ALL-UNNAMED",
-        "--enable-native-access=ALL-UNNAMED"
-    )
 }
 
 javafx {
@@ -49,8 +42,8 @@ dependencies {
         exclude(group = "org.openjfx")
     }
     implementation("org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0")
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:$junitVersion")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
     implementation(platform("org.mongodb:mongodb-driver-bom:5.6.1"))
     implementation("org.mongodb:mongodb-driver-sync")
     implementation("org.slf4j:slf4j-simple:2.0.12")
